Minor cleanup: add serialVersionUID and replace new Integer(..) with Integer.valueOf(..)